fix(auth): logout user flow by adding token to redis blacklist
